# nightgraph

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  check.sh
.cargo/: config.toml
.github/workflows/: ci.yml
assets/data/: glitch_sketch_text.txt
cli/: Cargo.toml  README.md
cli/src/: main.rs
examples/: basic.rs  three_d.rs
examples/text/: Cargo.toml
examples/text/src/: main.rs
graphics/: Cargo.toml  README.md
graphics/benches/: paths.rs
graphics/examples/: basic.rs  smooth_rotate.rs  text_intersect.rs  three_d.rs
graphics/src/: canvas.rs  geometry.rs  geometry_3d.rs  lib.rs  page.rs  prelude.rs  text.rs  units.rs  utils.rs
graphics/src/geometry/: circle.rs  ellipse.rs  error.rs  line.rs  mod.rs  path.rs  poly.rs  text.rs
graphics/src/render/: egui.rs  mod.rs  svg.rs
ngfx/: Cargo.toml
ngfx/src/: main.rs
nightgraph-derive/: Cargo.toml
nightgraph-derive/src/: lib.rs
nightgraph-derive/src/parse/: param_attr.rs
runner/: Cargo.toml
runner/src/: main.rs
runner/src/ui/: mod.rs
sketch/: Cargo.toml  README.md
sketch/src/: blossom.rs  doop.rs  lib.rs  metadata.rs  sketch.rs
sketch/src/sketches/: blossom.rs  charcoal.rs  glitch.rs  manifold.rs  mod.rs  postcard.rs  weather.rs
sketch_derive/: Cargo.toml  README.md
sketch_derive/src/: codegen.rs  lib.rs
sketch_derive/src/codegen/: mod.rs  sketchlist.rs
sketch_derive/src/parse/: mod.rs  param.rs  param_attr.rs  sketch.rs  sketch_attr.rs  sketchlist.rs  utils.rs
sketches/: Cargo.toml
sketches/src/: blossom.rs  lib.rs
src/: geometry.rs  geometry_3d.rs  lib.rs  page.rs
ui/: .gitignore  Cargo.toml  README.md  build_web.sh  start_server.sh
ui/docs/: index.html  manifest.json  sw.js
ui/src/: app.rs  lib.rs  main.rs
ui/src/app/: drawing.rs  mod.rs  sketch_control.rs
