[package]
name = "nightgraph-cli"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
version = "0.1.0"
edition = "2018"
description = "A runner for nightgraph sketches"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nightgraphics = { path = "../graphics" }
nightsketch = { path = "../sketch", features = ["cli"] }
clap = "3.0.0-beta.5"
serde = {version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
