[package]
name = "nightgraphics"
version = "0.1.0"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
edition = "2018"
description = "Utilities for creating art"

[dependencies]
svg = "^0.10"
rusttype = "^0.9"
egui = "^0.14"
kurbo = "0.8.1"

[dev-dependencies]
criterion = "^0.3"
rand = "^0.8"

[[bench]]
name = "paths"
harness = false
