[package]
name = "nightgraphics"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
version = "0.1.0"
edition = "2018"
description = "Utilities for creating art"
license = "MIT"

[dependencies]
svg = "0.10"
rusttype = "0.9"
egui = "0.14"
kurbo = "~0.8.2"
itertools = "0.10"

[dev-dependencies]
criterion = "^0.3"
rand = "^0.8"

[[bench]]
name = "paths"
harness = false
