[package]
name = "nightgraphics"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
version = "0.1.0"
edition = "2018"
description = "An art-centric graphics library providing a convenient drawing API, geometric operations, and various export formats"
license = "MIT"

[dependencies]
svg = "0.10"
rusttype = "0.9"
# egui's default features includes bundled fonts, which we do not need
egui = { version = "0.18", default-features = false }
kurbo = "~0.8.3"
itertools = "0.10"

[dev-dependencies]
criterion = "^0.3"
rand = "^0.8"

[[bench]]
name = "paths"
harness = false
