[package]
name = "ngfx"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
version = "0.1.0"
edition = "2018"
description = "A runner for nightgraphics sketches"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nightgraphics = { path = "../graphics" }
sketches = { path = "../sketches" }
clap = "3.0.0-beta.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}

