[package]
name = "nightgraph_runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: implement a way to use dynamic linking when developing, but static when
# packaging (or alternatively, when building the release profile.
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_egui = "0.7.0"
