[package]
name = "nightsketch"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
version = "0.1.0"
edition = "2018"
description = "A framework for making sketches with the nightgraphics crate"
license = "MIT"
license-file = "../LICENSE-MIT"

[dependencies]
nightgraphics = { path = "../graphics" }
nightsketch_derive = { path = "../sketch_derive" }
clap = { version = "3.0.0-beta.5", optional = true }
serde = {version = "1.0", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap", "nightsketch_derive/cli"]
serde_support = ["serde", "nightsketch_derive/serde_support"]
