[package]
name = "nightsketch"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
version = "0.1.0"
edition = "2018"
description = "A framework for making sketches with the nightgraphics crate"
license = "MIT"

[dependencies]
nightgraphics = { path = "../graphics" }
nightsketch_derive = { path = "../sketch_derive" }
clap = { version = "3.0.0-beta.5", optional = true }
serde = {version = "1.0", features = ["derive"], optional = true }
rand = "0.8"
rand_pcg = "0.3"

[features]
default = []
cli = ["clap", "nightsketch_derive/cli"]
serde_support = ["serde", "nightsketch_derive/serde_support"]
