[package]
name = "nightsketch"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
version = "0.1.0"
edition = "2018"
description = "A framework for making sketches with the nightgraphics crate"
license = "MIT"

[dependencies]
nightgraphics = { path = "../graphics" }
nightsketch_derive = { path = "../sketch_derive" }
clap = { version = "3.0.0-rc.0", optional = true }
serde = {version = "1.0", features = ["derive"], optional = true }
rand = "0.8"
rand_pcg = "0.3"
# Required for rand to work on wasm
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
cli = ["serde_support", "clap", "clap/derive", "nightsketch_derive/cli"]
serde_support = ["serde", "nightsketch_derive/serde_support"]
