[package]
name = "sketches"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nightgraphics = { path = "../graphics" }
clap = "3.0.0-beta.4"
serde = {version = "1.0", features = ["derive"] }
