[package]
name = "sketches"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
version = "0.1.0"
edition = "2018"

[dependencies]
nightgraphics = { path = "../graphics" }
nightgraph-derive = { path = "../nightgraph-derive" }
clap = { version = "3.0.0-beta.4", optional = true }
serde = {version = "1.0", features = ["derive"], optional = true }

[features]
default = []
cli = ["clap", "nightgraph-derive/cli"]
serde_support = ["serde", "nightgraph-derive/serde_support"]
