[package]
name = "nightgraph-ui"
authors = ["Kyle Kneitinger <kyle@kneit.in>"]
version = "0.1.0"
edition = "2018"
description = "A UI and runner for nightgraph sketches"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# eframe's default features includes bundled fonts, which we do not need
eframe = { version = "0.15" }
nightgraphics = { path = "../graphics" }
nightsketch = { path = "../sketch" }
serde = {version = "1.0", features = ["derive"] }

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "nightsketch/serde_support"]
